# wikijs-mcp

./: .gitignore  LICENSE  README.md  example_client.py  main.py  pyproject.toml  wikijs_mcp.py
